@@ -601,6 +601,11 @@ static const oci8_bind_vtable_t bind_oradate_vtable = {
     SQLT_DAT,
 };
 
+static VALUE bind_oradate_alloc(VALUE klass)
+{
+    return oci8_allocate_typeddata(klass, &bind_oradate_vtable.base);
+}
+
 void Init_ora_date(void)
 {
     cOraDate = rb_define_class("OraDate", rb_cObject);
@@ -640,5 +645,5 @@ void Init_ora_date(void)
     rb_define_method(cOraDate, "_dump", ora_date_dump, -1);
     rb_define_singleton_method(cOraDate, "_load", ora_date_s_load, 1);
 
-    oci8_define_bind_class("OraDate", &bind_oradate_vtable);
+    oci8_define_bind_class("OraDate", &bind_oradate_vtable, bind_oradate_alloc);
 }
